src/components/servicesListItem/style.css
.services__item {
  display: flex;
  flex-direction: column;
  flex: 1 1;
  gap: 2rem;
  height: 200px;
  padding: 2rem;
  font-size: 1rem;
  line-height: 1.2;
  color: var(--light-blue-100);
  box-shadow: var(--box-shadow);
  border-radius: 8px;
}

.services__item--long {
  height: auto;
  max-height: max-content;
}

.services__item-block {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.services__item-block:hover .services__item-text,
.services__item-block:focus .services__item-text {
  -webkit-text-stroke: 1px var(--light-blue-200);
  transition: all .5s ease-in-out;
}

.services__item-text {
  font-size: 3rem;
  font-weight: 800;
  line-height: 1.4;
  color: transparent;
}

.services__item-link {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 4rem;
  height: 4rem;
  background-color: var(--light-blue-100);
  border-radius: 50%;
  transition: all .5s ease-in;
}

.services__item-link .services__item-icon:hover {
  transform: rotate(-45deg);
}

.services__item-icon {
  font-size: 1.6rem;
  line-height: 1.4;
  color: var(--white);
}

.services__subheading {
  font-size: 1.7rem;
  line-height: 1.4;
}

.services__description {
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: 672px;
  white-space: nowrap;
  font-size: 1.6rem;
  line-height: 1.4;
}

.services__item .services__description.services__description--long {
  overflow: initial;
  max-width: 100%;
  min-height: 230px;
  text-overflow: initial;
  white-space: initial;
}

.services__more {
  display: flex;
  max-width: 93px;
  font-family: inherit;
  font-size: 1.6rem;
  line-height: 1.4;
  color: var(--light-blue-100);
  border: none;
  border-bottom: 1px solid var(--light-blue-100);
  background-color: transparent;
}

.text-outline {
  -webkit-text-stroke: 1px var(--light-blue-100);
}

@media screen and (max-width: 780px) {
  .services__description {
    white-space: wrap;
  }
}

@media screen and (max-width: 1024px) {
  .services__item {
    flex: initial;
    gap: 4rem;
    padding: 0;
    box-shadow: none;
    border-radius: 0;
  }

  .services__item .services__description.services__description--long {
    min-height: 140px;
  }
}

